--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "migrate:run": "npx typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -32,8 +33,10 @@
     "cookie-parser": "^1.4.7",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
+    "pug": "^3.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.26"
