--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "migrate:run": "npx typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -36,7 +35,6 @@
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
-    "pug": "^3.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.26"
@@ -55,6 +53,7 @@
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.1",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
