--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "migrate:generate": "npx typeorm-ts-node-commonjs migration:generate ./src/database/migrations/Init -d ./src/database/data-source.ts",
-    "migrate:run": "npx typeorm-ts-node-commonjs migration:run -d ./src/database/data-source.ts"
+    "typeorm": "npm run build && npx typeorm -d dist/database/orm.config.js",
+    "migration:generate": "npm run typeorm -- migration:generate",
+    "migration:run": "npm run typeorm -- migration:run",
+    "migration:revert": "npm run typeorm -- migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
