Finished: cloudinary and multer configurations
Implemented: cloudinary service with uploadPatientMedicalReport method

--- a/.env
+++ b/.env
@@ -33,3 +33,9 @@ SMTP_PORT="587"
 SMTP_SECURE="false"
 SMTP_USER="youssefhassanein17@gmail.com"
 SMTP_PASS="gwuwssuycfnqqsya"
+
+# Cloudinary Storage
+CLOUDINARY_CLOUD_NAME="ddktkfkyy"
+CLOUDINARY_API_KEY="441384174489131"
+CLOUDINARY_API_SECRET="O-Z0Nh1GAvZr6tYciz1W5lLh_fo"
+MAX_FILE_SIZE="5242880"
