--- a/.gitignore
+++ b/.gitignore
@@ -27,16 +27,16 @@ lerna-debug.log*
 *.launch
 .settings/
 *.sublime-workspace
+.vscode/
 
 # IDE - VSCode
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 
 # dotenv environment variable files
-.env
 .env.development.local
 .env.test.local
 .env.production.local
