--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths:
-      - 'src/**'
+      ['src/**', 'package.json', 'package-lock.json', '.github/workflows/**']
 
 jobs:
   build:
