--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,8 +57,9 @@ jobs:
           username: ${{ secrets.AZURE_VM_USER }}
           key: ${{ secrets.AZURE_VM_SSH_KEY }}
           script: |
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
             cd ~/app
             npm install --omit=dev
             npm audit fix
-            fuser -k 4000/tcp || true
-            node dist/main.js
+            pm2 delete moment-backend || true
+            pm2 start dist/main.js --name "moment-backend"
